# Operating_Systems_labs

./: .gitignore
Colloq/: README.md
Colloq/Zad_1var_Sidorskaya_colloq/: README.md  main.cpp  test.cpp
Colloq2/: README.md  main.cpp
Colloq2_Singleton_DP/: CMakeLists.txt  factorial.h  reverse_list.h
Colloq3/: Makefile  README.md
Colloq3/src/: command_example.cpp  strategy_example.cpp  template_method_example.cpp
Lab1/: CMakeLists.txt  README.md
Lab1/src/: Main.cpp
Lab1/tests/: CmakeLists.txt  test_employee.cpp
Lab2/: .gitignore  CMakeLists.txt  README.md
Lab2/include/: array_processor.h
Lab2/src/: CMakeLists.txt  array_processor.cpp  main.cpp
Lab2/tests/: CMakeLists.txt  test_array_processor.cpp
Lab3/: CMakeLists.txt  README.md
Lab3/include/: MarkerThread.h  SharedResources.h
Lab3/src/: CMakeLists.txt  Main.cpp  MarkerThread.cpp  SharedResources.cpp
Lab3/tests/: CMakeLists.txt  MarkerThreadTests.cpp
Lab4/: CMakeLists.txt  README.md
Lab4/Lab4/: CMakeLists.txt  Lab4.cpp
Lab4/include/: CMakeLists.txt  RingBuffer.h
Lab4/src/: Receiver.cpp  RingBuffer.cpp  Sender.cpp
Lab4/tests/: CMakeLists.txt  test_ringbuffer.cpp
OS_Lab1/: .gitignore
OS_Lab1/include/: employee.h
OS_Lab1/src/: CMakeLists.txt  Creator.cpp  Reporter.cpp
