# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#cmake_minimum_required(VERSION 3.10)

cmake_minimum_required (VERSION 3.8)

project(ProcessCreationLab)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
enable_testing()

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/release-1.12.1.zip
)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)


project ("Lab1_Operating_systems")

# Включите подпроекты.
add_subdirectory(src)
add_subdirectory(tests)



